--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ pillow==11.2.1
 django-crispy-forms==2.4
 crispy-bootstrap5==2025.4
 django-widget-tweaks==1.5.0
-dal
+django-autocomplete-light
 dal-select2
