--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ arabic-reshaper==3.0.0
 asgiref==3.8.1
 asn1crypto==1.5.1
 billiard==4.2.1
-
 celery==5.5.3
 certifi==2025.4.26
 cffi==1.17.1
@@ -21,9 +20,14 @@ dj-database-url==3.0.0
 Django==5.2.1
 django-autocomplete-light==3.12.1
 django-cloudinary-storage==0.3.0
+Django==5.2.1
+django-autocomplete-light==3.12.1
+django-cloudinary-storage==0.3.0
 django-crispy-forms==2.4
 django-storages==1.14.6
+django-storages==1.14.6
 django-widget-tweaks==1.5.0
+dal-select2==0.0.1
 fire==0.7.0
 fonttools==4.58.4
 gunicorn==23.0.0
@@ -36,25 +40,19 @@ numpy==2.3.0
 opencv-python-headless==4.11.0.86
 oscrypto==1.3.0
 packaging==25.0
-pdf2docx==0.5.8
-pdfdocx==1.7
 pillow==11.2.1
 prompt_toolkit==3.0.51
 psycopg2-binary==2.9.10
 pycparser==2.22
 pyHanko==0.29.0
 pyhanko-certvalidator==0.27.0
-PyMuPDF==1.26.1
-pypdf==5.6.0
 python-bidi==0.6.6
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.1.0
 PyYAML==6.0.2
 redis==6.2.0
-reportlab==4.4.1
 requests==2.32.3
-
 six==1.17.0
 sqlparse==0.5.3
 svglib==1.5.1
@@ -69,4 +67,4 @@ vine==5.1.0
 wcwidth==0.2.13
 webencodings==0.5.1
 whitenoise==6.9.0
-xhtml2pdf==0.2.17
+
